[#112] abin/dileep - Fixed alignment issues in my profile.
What are the changes?

* Seperating cash and count using padding

Why do we need this change?

* To seperate cash and count

--- a/public/css/profile.css
+++ b/public/css/profile.css
@@ -90,6 +90,7 @@ header>h3 {
 
 .profile-wrapper table tbody td {
   text-align: right;
+  padding-right: 0.5em;
 }
 
 .profile-wrapper table thead th {
